--- a/Work/MK-Expert/app/index.html
+++ b/Work/MK-Expert/app/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<title>МК-Эксперт Test</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="css/fonts.css">
+<!--	<link rel="stylesheet" href="css/fonts.css">-->
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
