--- a/Work/MK-Expert/app/index.html
+++ b/Work/MK-Expert/app/index.html
@@ -24,8 +24,8 @@
 		<div class="row">
 
 			<div class="col-xs-12 col-sm-4">
-				<div class="item">
-					<img src="img/block1.png" alt="block1">
+				<div class="item opac1">
+					<img id="opa1" class="" src="img/block1.png" alt="block1">
 					<h3>We deliver <br>quality</h3>
 					<div id="btn1" class="wrap active">
 						<a href="#">
@@ -37,8 +37,8 @@
 			</div>
 
 			<div class="col-xs-12 col-sm-4">
-				<div class="item">
-					<img src="img/block2.png" alt="block2">
+				<div class="item opac2">
+					<img id="opa2" class="opa" src="img/block2.png" alt="block2">
 					<h3>Professional <br> serices</h3>
 					<div id="btn2" class="wrap">
 						<a href="#">
@@ -50,8 +50,8 @@
 			</div>
 
 			<div class="col-xs-12 col-sm-4">
-				<div class="item">
-					<img src="img/block3.png" alt="block3">
+				<div class="item opac3">
+					<img id="opa3" class="opa" src="img/block3.png" alt="block3">
 					<h3>We are <br>pasionate</h3>
 					<div id="btn3" class="wrap">
 						<a href="#">
