Changed the hover effects

--- a/Work/MK-Expert/app/index.html
+++ b/Work/MK-Expert/app/index.html
@@ -27,7 +27,7 @@
 				<div class="item opac1">
 					<img id="opa1" class="" src="img/block1.png" alt="block1">
 					<h3>We deliver <br>quality</h3>
-					<div id="btn1" class="wrap active">
+					<div id="btn1" class="wrap">
 						<a href="#">
 							<span>READ MORE</span>
 							<i class="fa fa-arrow-right"></i>
