Changed the hover effects

--- a/Work/MK-Expert/app/index.html
+++ b/Work/MK-Expert/app/index.html
@@ -25,7 +25,7 @@
 
 			<div class="col-xs-12 col-sm-4">
 				<div class="item opac1">
-					<img id="opa1" class="" src="img/block1.png" alt="block1">
+					<img id="opa1" class="opa" src="img/block1.png" alt="block1">
 					<h3>We deliver <br>quality</h3>
 					<div id="btn1" class="wrap">
 						<a href="#">
